@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.xlate</groupId>
   <artifactId>validators</artifactId>
-  <version>1.0.1-SNAPSHOT</version>
+  <version>2.0.0-SNAPSHOT</version>
 
   <name>Additional Bean Validators for Java</name>
   <description>Additional validators and annotations for use with Java Bean Validation (JSR-303)</description>
@@ -54,8 +54,8 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
 
     <version.maven.compiler.plugin>3.8.1</version.maven.compiler.plugin>
     <version.maven.javadoc.plugin>3.2.0</version.maven.javadoc.plugin>
@@ -71,13 +71,13 @@
     <dependency>
       <groupId>jakarta.validation</groupId>
       <artifactId>jakarta.validation-api</artifactId>
-      <version>2.0.2</version>
+      <version>3.0.0</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>jakarta.el</groupId>
       <artifactId>jakarta.el-api</artifactId>
-      <version>3.0.3</version>
+      <version>4.0.0</version>
       <optional>true</optional>
     </dependency>
 
@@ -102,13 +102,13 @@
     <dependency>
       <groupId>org.hibernate.validator</groupId>
       <artifactId>hibernate-validator</artifactId>
-      <version>6.1.7.Final</version>
+      <version>7.0.0.Final</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.glassfish</groupId>
       <artifactId>jakarta.el</artifactId>
-      <version>3.0.3</version>
+      <version>4.0.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -120,6 +120,12 @@
     <dependency>
       <groupId>org.apache.derby</groupId>
       <artifactId>derby</artifactId>
+      <version>10.15.2.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.derby</groupId>
+      <artifactId>derbytools</artifactId>
       <version>10.15.2.0</version>
       <scope>test</scope>
     </dependency>
@@ -252,6 +258,9 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
+            <configuration>
+              <additionalOptions>-html5</additionalOptions>
+            </configuration>
             <executions>
               <execution>
                 <id>attach-javadocs</id>
@@ -300,59 +309,6 @@
           </plugin>
         </plugins>
       </build>
-    </profile>
-    <profile>
-      <id>multirelease</id>
-      <activation>
-        <jdk>[9,)</jdk>
-      </activation>
-      <build>
-        <pluginManagement>
-          <plugins>
-            <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-compiler-plugin</artifactId>
-              <executions>
-                <execution>
-                  <id>default-compile</id>
-                  <phase>compile</phase>
-                  <goals>
-                    <goal>compile</goal>
-                  </goals>
-                  <inherited>false</inherited>
-                  <configuration>
-                    <release>8</release>
-                  </configuration>
-                </execution>
-                <!-- <execution>
-                  <id>module-compile</id>
-                  <goals>
-                    <goal>compile</goal>
-                  </goals>
-                  <configuration>
-                    <release>9</release>
-                    <compileSourceRoots>
-                      <compileSourceRoot>${project.basedir}/src/main/java9</compileSourceRoot>
-                    </compileSourceRoots>
-                    <multiReleaseOutput>true</multiReleaseOutput>
-                  </configuration>
-                </execution> -->
-              </executions>
-            </plugin>
-            <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-javadoc-plugin</artifactId>
-              <configuration>
-                <additionalOptions>-html5</additionalOptions>
-              </configuration>
-            </plugin>
-          </plugins>
-        </pluginManagement>
-      </build>
-      <properties>
-        <!-- For surefire tests -->
-        <argLine>--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED</argLine>
-      </properties>
     </profile>
   </profiles>
 </project>
